# threads-cli

./: .env.example  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pylint.yml  python-app.yml
src/: api.py  app.py  draft_utils.py  env.py  utils.py
tests/: conftest.py  test_main.py
