[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "threads-cli"
version = "1.1.2"
authors = [
  { name = "Peter Lord", email = "YOUR_EMAIL@DOMAIN" },
  { name = "Muhammad Amin Boubaker", email = "YOUR_EMAIL@DOMAIN" }
]
description = "CLI tool for interacting with Meta Threads"
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
  "requests>=2.32.3",
  "typer==0.12.3",
  "rich>=13.7.1",
  "python-dotenv>=1.0.1"
]

[project.scripts]
threads-cli = "main:main"
